Actually add ControlLook support to the TODO list. Last rev was just updating copyrights years.
git-svn-id: http://svn.osdrawer.net/thememanager@61 8112db4b-192c-4c9f-a53c-ee3be918ac85

--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -9,6 +9,7 @@ TODOs for Theme manager:
 * Save as resource/BMessage ? (for editing)
 * broadcast _UIC for Haiku
 * ideas for addons:
+	- ControlLook change support for Haiku
 	- ~/config/settings/Tracker/DefaultFolderTemplate/ (default background ??)
 	- Desktop icon size ?
 	- Desktop shelf ? (dangerous)
